# gitplot

./: .gitignore  Makefile  README.md  pyproject.toml
src/gitplot/: __init__.py  __main__.py  busfactor.py  churn.py  cli.py  collect.py  coupling.py  data.py  git.py  pulse.py  sediment.py  survivors.py
tests/: test_git.py
