[project]
name = "gitplot"
version = "0.2.1"
description = "Git history visualizations from the command line"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Maximilian Wolf" }]
keywords = ["cli", "git", "visualization", "code-archaeology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tyro>=1.0.8",
    "polars>=1.38.1",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0",
]

[project.urls]
Repository = "https://github.com/MaxWolf-01/gitplot"
Issues = "https://github.com/MaxWolf-01/gitplot/issues"

[project.scripts]
gitplot = "gitplot:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["gitplot"]
